fixing footer alignment

--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -44,10 +44,12 @@ footer{
     bottom: 0;
     z-index: 1;
     width: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     height: 25px;
-    padding-top: 20px;
     color: #fff;
-    font-size: 75%;
+    font-size: 55%;
     background: #FC3727;
 }
 
